--- a/src/main/resources/static/css/venue_pages/venue.css
+++ b/src/main/resources/static/css/venue_pages/venue.css
@@ -8,6 +8,7 @@ h1 {
     color: #fff;
     font-family: inherit;
     font-size: 2.4rem;
+    font-weight: 600;
 }
 
 .hero-image {
@@ -42,13 +43,15 @@ h1 {
     min-height: 60%;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 10px;
 }
 
 .event-container div:first-child {
+    text-align: center;
     width: 100%;
     margin: 0 auto;
+    font-size: 1.2rem;
 }
 
 .desc {
@@ -65,7 +68,6 @@ h1 {
 @media screen and (min-width: 700px) {
     .header-wrapper {
         display: flex;
-        align-items: center;
         padding: 2.5rem;
     }
 
@@ -87,13 +89,15 @@ h1 {
 
 
 /*-------- tip and question section style ---------*/
+.tip-card {
+    margin-bottom: 3rem;
+}
+
 .tip-card,
 .question-card {
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 10px;
-    margin-bottom: 3rem;
     height: 500px;
-    /*border: 2px dashed green;*/
     overflow-y: auto;
     padding: 0 1rem;
 }
@@ -187,12 +191,13 @@ h1 {
     font-weight: bold;
 }
 
-
-
 @media screen and (min-width: 700px) {
     .cards-wrapper {
         display: flex;
         justify-content: space-between;
+    }
+    .tip-card {
+        margin-bottom: 0;
     }
     .tip-card,
     .question-card {
