--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -6,7 +6,7 @@
 
 	<head>
 
-		<div th:fragment="myheader (title)">
+		<div th:fragment="myheader (title)" th:remove="tag">
 
 			<title th:text="${title}"></title>
 
